# data-engineering-zoomcamp

./: .gitignore  README.md
01-infraestructura-y-prerrequisitos/: 01-introduccion-a-docker.md  02-entornos-virtuales.md  03-dockerizar-un-proyecto-uv.md  04-dockerizar-postgresql.md  05-carga-de-datos.md  06-script-parametrizable.md  07-administrar-postgre-con-pgadmin.md  07-administrar-postgresql-con-pgadmin.md  08-dockerizar-el-script-de-carga.md  09-orquestar-servicios-con-docker-compose.md  README.md
02-orquestacion-de-flujos-de-datos/: 01-introduccion-a-kestra.md  02-primeros-pasos-con-kestra.md  03-conceptos-basicos-de-kestra.md  (+6 more)
07-procesos-en-tiempo-real/pipelines/pyflink-pipeline/: Makefile  docker-compose.flink.yml  docker-compose.yml  dummy-consumer.py  flink.Dockerfile  models.py  postgres-consumer.py  producer.py  pyproject.flink.toml  pyproject.toml
07-procesos-en-tiempo-real/pipelines/pyflink-pipeline/sql/: create_aggregated_longest_streak.sql  create_aggregated_pickup.sql  create_aggregated_tips_per_hour.sql  create_enriched_rides.sql  create_zones.sql  select_longest_streak.sql
07-procesos-en-tiempo-real/pipelines/pyflink-pipeline/src/: models.py
07-procesos-en-tiempo-real/pipelines/pyflink-pipeline/src/consumers/: avro_consumer.py  dummy_consumer.py  homework_counter_consumer.py  postgres_consumer.py
07-procesos-en-tiempo-real/pipelines/pyflink-pipeline/src/jobs/: aggregate_job.py  aggregated_longest_streak_job.py  aggregated_pickup_job.py  aggregated_tips_per_hour_job.py  enriched_rides_job.py  pass_through_job.py
07-procesos-en-tiempo-real/pipelines/pyflink-pipeline/src/producers/: avro_producer.py  delayed_producer.py  file_producer.py  homework_producer.py
07-procesos-en-tiempo-real/pipelines/pyflink-pipeline/src/schemas/: ride.avsc
proyecto-analisis-del-boc/pipeline/python/archive-parser/: README.md  pyproject.toml
proyecto-analisis-del-boc/pipeline/python/archive-parser/archive_parser/: cli.py  parser.py
proyecto-analisis-del-boc/pipeline/python/archive-parser/examples/: archive.html
proyecto-analisis-del-boc/pipeline/python/archive-parser/tests/: conftest.py  test_parser.py
proyecto-analisis-del-boc/pipeline/python/document-parser/: README.md  pyproject.toml
proyecto-analisis-del-boc/pipeline/python/document-parser/document_parser/: __init__.py  cli.py  parser.py
proyecto-analisis-del-boc/pipeline/python/document-parser/examples/: 1980-001-001.html  2009-037-008.html  2025-068-1352.html  2026-001-001.html  2026-003-007.html
proyecto-analisis-del-boc/pipeline/python/document-parser/tests/: conftest.py  test_parser.py
proyecto-analisis-del-boc/pipeline/python/document-reader/: README.md  pyproject.toml
proyecto-analisis-del-boc/pipeline/python/document-reader/document_reader/: __init__.py  cli.py  reader.py
proyecto-analisis-del-boc/pipeline/python/document-reader/document_reader/formats/: __init__.py  base.py  format_2006.py  format_modern.py
proyecto-analisis-del-boc/pipeline/python/document-reader/tests/: conftest.py  test_format_2006.py  test_reader.py
proyecto-analisis-del-boc/pipeline/python/issue-parser/: README.md  pyproject.toml
proyecto-analisis-del-boc/pipeline/python/issue-parser/examples/: boc-1982_011.json  boc-1993_033.html  boc-1993_033.json  boc-2001_121.html  boc-2001_121.json  boc-2009_255.html  boc-2009_255.json  boc-2020_062.html  boc-2020_062.json  boc-2025_001.html  boc-2026_47.json
proyecto-analisis-del-boc/pipeline/python/issue-parser/issue_parser/: cli.py  parser.py
proyecto-analisis-del-boc/pipeline/python/issue-parser/issue_parser/formats/: __init__.py  base.py  format_1982.py  format_2026.py  format_pdf_only.py
proyecto-analisis-del-boc/pipeline/python/issue-parser/tests/: conftest.py  test_format_1982.py  test_format_2009.py  test_format_2026.py  test_format_pdf_only.py  test_parser.py
proyecto-analisis-del-boc/pipeline/python/issue-reader/: README.md  pyproject.toml
proyecto-analisis-del-boc/pipeline/python/issue-reader/issue_reader/: __init__.py  cli.py  reader.py
proyecto-analisis-del-boc/pipeline/python/issue-reader/issue_reader/formats/: __init__.py  base.py  format_2001.py  format_2006.py
proyecto-analisis-del-boc/pipeline/python/issue-reader/tests/: conftest.py  test_format_2001.py  test_format_2006.py  test_reader.py
proyecto-analisis-del-boc/pipeline/python/year-parser/: README.md  pyproject.toml
proyecto-analisis-del-boc/pipeline/python/year-parser/examples/: 1980.html  2020.html  2025.html
proyecto-analisis-del-boc/pipeline/python/year-parser/tests/: conftest.py  test_parser.py
proyecto-analisis-del-boc/pipeline/python/year-parser/year_parser/: cli.py  parser.py
proyecto-clima-y-desarrollo/producer/openaq/: Dockerfile  README.md  pyproject.toml
proyecto-clima-y-desarrollo/producer/openaq/src/openaq/: api.py  config.py  kafka_sink.py  poll.py  transform.py
proyecto-clima-y-desarrollo/producer/openaq/tests/: conftest.py  test_api.py  test_config.py  test_kafka_sink.py  test_poll.py  test_transform.py
proyecto-clima-y-desarrollo/producer/worldbank/: Dockerfile  README.md  pyproject.toml
proyecto-clima-y-desarrollo/producer/worldbank/src/worldbank/: api.py  config.py  db.py  ingest.py  load.py  parse.py  storage.py
proyecto-clima-y-desarrollo/producer/worldbank/tests/: conftest.py  test_api.py  test_ingest.py  test_load.py  test_parse.py  test_storage.py
(+696 files in other folders)
