[project]
name = "openaq-producer"
version = "0.1.0"
description = "Polls the OpenAQ v3 API and publishes air-quality measurements to Redpanda."
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "kafka-python-ng>=2.2",
]

[project.scripts]
openaq-poll = "openaq.poll:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openaq"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
