[project]
name = "worldbank-producer"
version = "0.1.0"
description = "Fetches World Bank Indicators API payloads to S3 and lands them into the warehouse."
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "boto3>=1.35",
    "psycopg[binary]>=3.2",
]

[project.scripts]
worldbank-ingest = "worldbank.ingest:main"
worldbank-load = "worldbank.load:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worldbank"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "moto[s3]>=5.0",
]
