[project]
name = "archive-parser"
version = "0.1.0"
description = "Parser del índice de años del archivo del Boletín Oficial de Canarias"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
]

[project.scripts]
archive-parser = "archive_parser.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["archive_parser"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
