[project]
name = "document-reader"
version = "0.1.0"
description = "Lector de PDFs de disposiciones individuales del Boletín Oficial de Canarias"
readme = "README.md"
authors = [
    { name = "Carlos Capote", email = "carlos.capote@hawara.es" }
]
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11.9",
]

[project.scripts]
document-reader = "document_reader.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["document_reader"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
