[project]
name = "year-parser"
version = "0.1.0"
description = "Parser del índice de boletines de un año del Boletín Oficial de Canarias"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
]

[project.scripts]
year-parser = "year_parser.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["year_parser"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
